# pism-cloud

./: .gitignore  Dockerfile  Makefile  README.md  environment.yml  pyproject.toml  rgi-glaciers.ipynb
.github/workflows/: push-to-ghcr.yml
container/: Dockerfile  Makefile  README.md  pism_cloud_runner.py  test.sh
pism_cloud/: execute.py
src/pism_cloud/: __main__.py  execute.py
src/pism_cloud/etc/: entrypoint.sh
